--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   checks:
     runs-on: ubuntu-latest
@@ -17,7 +20,7 @@ jobs:
         run: yarn check
       - name: test
         run: yarn test
-  publish:
+  create-release:
     needs: checks
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +30,7 @@ jobs:
         run: yarn
       - name: build
         run: yarn build
-      - name: Get short SHA
+      - name: get short SHA
         id: sha
         run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: create release
