--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,20 +6,20 @@ on:
 
 jobs:
   publish:
-    name: Publish
+    name: publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v2
-      - name: Install
+      - name: install
         run: yarn install --frozen-lockfile
-      - name: Build
+      - name: build
         run: yarn build
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - name: Publish
+      - name: publish
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.SECRET_NPM_DEPLOY_TOKEN }}
