fix: public npm access

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "@badrequest400/faker-jellycat",
   "version": "1.0.0",
   "description": "Library to create mock Jellycat data",
+  "bugs": "https://github.com/badrequest400/faker-jellycat/issues",
+  "repository": {
+    "url": "git+https://github.com/badrequest400/faker-jellycat.git",
+    "type": "git"
+  },
   "engines": {
     "node": ">=18.20"
   },
