--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "node": ">=18.20"
   },
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/src/index.cjs",
+  "module": "./dist/src/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
+      "import": "./dist/src/index.js",
+      "require": "./dist/src/index.cjs",
       "types": "./dist/index.d.ts"
     },
     "./*": {
-      "import": "./dist/*.js",
-      "require": "./dist/*.cjs",
+      "import": "./dist/src/*.js",
+      "require": "./dist/src/*.cjs",
       "types": "./dist/*.d.ts"
     }
   },
@@ -33,8 +33,8 @@
   "scripts": {
     "build": "yarn run build:clean && yarn run build:esm && yarn run build:cjs && yarn run build:types",
     "build:clean": "rm -rf ./dist",
-    "build:esm": "esbuild --platform=node --format=esm --outdir=./dist ./src/*.ts",
-    "build:cjs": "esbuild --platform=node --format=cjs --outdir=./dist --out-extension:.js=.cjs ./src/*.ts",
+    "build:esm": "esbuild --platform=node --format=esm --outdir=./dist ./src/*.ts ./data/*.json",
+    "build:cjs": "esbuild --platform=node --format=cjs --outdir=./dist --out-extension:.js=.cjs ./src/*.ts ./data/*.json",
     "build:types": "tsc --emitDeclarationOnly",
     "check": "tsc --noEmit",
     "test": "vitest --config ./vitest.config.ts run",
