--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@badrequest400/faker-jellycat",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Library to create mock Jellycat data",
   "bugs": "https://github.com/badrequest400/faker-jellycat/issues",
   "repository": {
@@ -33,8 +33,8 @@
   "scripts": {
     "build": "yarn run build:clean && yarn run build:esm && yarn run build:cjs && yarn run build:types",
     "build:clean": "rm -rf ./dist",
-    "build:esm": "esbuild --platform=node --format=esm --outdir=./dist ./src/*.ts ./data/*.json",
-    "build:cjs": "esbuild --platform=node --format=cjs --outdir=./dist --out-extension:.js=.cjs ./src/*.ts ./data/*.json",
+    "build:esm": "esbuild --platform=node --format=esm --bundle --outdir=./dist ./src/*.ts",
+    "build:cjs": "esbuild --platform=node --format=cjs --bundle --outdir=./dist --out-extension:.js=.cjs ./src/*.ts",
     "build:types": "tsc --emitDeclarationOnly",
     "check": "tsc --noEmit",
     "test": "vitest --config ./vitest.config.ts run",
